# python-graphql-example

./: README.md  docker-compose.yaml  pyproject.toml  server.py
database/: factories.py  models.py  seed.py
my_graphql/: query.py  schema.py  types.py
